--- a/frontend/app/settings.html
+++ b/frontend/app/settings.html
@@ -5,24 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vegan Lens - 설정</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-  <script src="https://unpkg.com/lucide@latest"></script>
+  <script src="https://unpkg.com/lucide@latest" defer></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
   <div class="container">
-
-    <!-- 상단 로고 -->
-    <header class="header">
-      <h1><span class="logo-green">Vegan</span> <span class="logo-tag">Lens</span></h1>
+    <header class="logo">
+      <img src="https://placehold.co/150x40?text=Logo" alt="Vegan Lens Logo" />
       <p class="sub-title">OPTION</p>
     </header>
 
-    <!-- 설정 내용 -->
     <main class="settings-container">
-
-      <!-- 프로필 이미지 -->
       <div class="profile">
-        <input type="file" id="profileInput" accept="image/*" capture hidden />
+        <input type="file" id="profileInput" accept="image/*" hidden />
         <div class="profile-image" id="profileImage"></div>
         <div class="profile-name">
           <span id="userName">사용자 이름</span>
@@ -32,7 +27,6 @@
         </div>
       </div>
 
-      <!-- Vegetarian 유형 선택 -->
       <div class="type-selector">
         <div id="selectedType">Vegan</div>
         <button id="toggleSelector">
@@ -49,40 +43,37 @@
       </div>
 
       <!-- 식품군 아이콘 -->
-      <div class="icons">
-        <span class="material-symbols-outlined icon active" id="fruit">nutrition</span>
-        <span class="material-symbols-outlined icon" id="vegetable">eco</span>
-        <span class="material-symbols-outlined icon" id="dairy">local_mall</span>
-        <span class="material-symbols-outlined icon" id="egg">egg</span>
-        <span class="material-symbols-outlined icon" id="fish">set_meal</span>
-        <span class="material-symbols-outlined icon" id="chicken">restaurant</span>
+      <div class="icon-grid">
+        <img id="fruit" class="icon" src="images/icons/fruit.png" alt="fruit" />
+        <img id="vegetable" class="icon" src="images/icons/vegetable_gray.png" alt="vegetable" />
+        <img id="dairy" class="icon" src="images/icons/dairy_gray.png" alt="dairy" />
+        <img id="egg" class="icon" src="images/icons/egg_gray.png" alt="egg" />
+        <img id="fish" class="icon" src="images/icons/fish_gray.png" alt="fish" />
+        <img id="chicken" class="icon" src="images/icons/chicken_gray.png" alt="chicken" />
       </div>
+
+
+
     </main>
 
-    <!-- 하단 바 (tail) -->
     <footer class="bottom-nav">
-      <div class="nav-icon" onclick="changeTab(this)">
+      <div class="nav-icon" data-tab="grid">
         <i data-lucide="layout-grid"></i>
       </div>
-      <div class="nav-icon" onclick="changeTab(this)">
+      <div class="nav-icon" data-tab="home">
         <i data-lucide="home"></i>
       </div>
-      <div class="nav-icon active" onclick="changeTab(this)">
+      <div class="nav-icon active" data-tab="settings">
         <i data-lucide="settings"></i>
       </div>
     </footer>
 
-    <!-- 닉네임 수정 모달 -->
+
     <div id="nameModal" class="modal hidden">
       <input type="text" id="nameInput" placeholder="닉네임 입력" />
       <button id="saveName">저장</button>
       <button id="cancelName">취소</button>
     </div>
   </div>
-
-  <script src="script.js"></script>
-  <script>
-    lucide.createIcons(); // 아이콘 렌더링
-  </script>
 </body>
 </html>
