--- a/frontend/app/settings.html
+++ b/frontend/app/settings.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vegan Lens - 설정</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/static/style.css" />
   <script src="https://unpkg.com/lucide@latest" defer></script>
-  <script src="script.js" defer></script>
+  <script src="/static/script.js" defer></script>
 </head>
 <body>
   <div class="container">
@@ -44,12 +44,12 @@
 
       <!-- 식품군 아이콘 -->
       <div class="icon-grid">
-        <img id="fruit" class="icon" src="images/icons/fruit.png" alt="fruit" />
-        <img id="vegetable" class="icon" src="images/icons/vegetable_gray.png" alt="vegetable" />
-        <img id="dairy" class="icon" src="images/icons/dairy_gray.png" alt="dairy" />
-        <img id="egg" class="icon" src="images/icons/egg_gray.png" alt="egg" />
-        <img id="fish" class="icon" src="images/icons/fish_gray.png" alt="fish" />
-        <img id="chicken" class="icon" src="images/icons/chicken_gray.png" alt="chicken" />
+        <img id="fruit" class="icon" src="/static/images/icons/fruit.png" alt="fruit" />
+        <img id="vegetable" class="icon" src="/static/images/icons/vegetable_gray.png" alt="vegetable" />
+        <img id="dairy" class="icon" src="/static/images/icons/dairy_gray.png" alt="dairy" />
+        <img id="egg" class="icon" src="/static/images/icons/egg_gray.png" alt="egg" />
+        <img id="fish" class="icon" src="/static/images/icons/fish_gray.png" alt="fish" />
+        <img id="chicken" class="icon" src="/static/images/icons/chicken_gray.png" alt="chicken" />
       </div>
 
 
