[Feature] Add result and loading pages with backend-linked flow and fixed-duration loader (07-29)
- [Added] Pictogram icon images for each user diet type (logic pre-existed; only asset paths added)
- [Added] Implemented standalone loading page with fixed minimum display duration (1s), even for fast backend responses
- [Added] Result page layout and logic integrated with backend response (image + analysis result)
- [Improved] Result flow now ensures minimum 1s loading screen, dynamically adjusting for actual backend latency

--- a/frontend/app/settings.html
+++ b/frontend/app/settings.html
@@ -44,12 +44,12 @@
 
       <!-- 식품군 아이콘 -->
       <div class="icon-grid">
-        <img id="fruit" class="icon" src="/static/images/icons/fruit.png" alt="fruit" />
         <img id="vegetable" class="icon" src="/static/images/icons/vegetable_gray.png" alt="vegetable" />
         <img id="dairy" class="icon" src="/static/images/icons/dairy_gray.png" alt="dairy" />
         <img id="egg" class="icon" src="/static/images/icons/egg_gray.png" alt="egg" />
         <img id="fish" class="icon" src="/static/images/icons/fish_gray.png" alt="fish" />
         <img id="chicken" class="icon" src="/static/images/icons/chicken_gray.png" alt="chicken" />
+        <img id="meat" class="icon" src="/static/images/icons/meat.png" alt="meat" />
       </div>
 
 
@@ -75,5 +75,6 @@
       <button id="cancelName">취소</button>
     </div>
   </div>
+
 </body>
 </html>
