--- a/frontend/app/settings.html
+++ b/frontend/app/settings.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vegan Lens - 설정</title>
+  <title>Vegan Lens - settings</title>
   <link rel="stylesheet" href="/static/style.css" />
   <script src="https://unpkg.com/lucide@latest" defer></script>
   <script src="/static/script.js" defer></script>
@@ -20,7 +20,7 @@
         <input type="file" id="profileInput" accept="image/*" hidden />
         <div class="profile-image" id="profileImage"></div>
         <div class="profile-name">
-          <span id="userName">사용자 이름</span>
+          <span id="userName">User Name</span>
           <button id="editNameBtn">
             <span class="material-symbols-outlined">edit</span>
           </button>
@@ -70,9 +70,9 @@
 
 
     <div id="nameModal" class="modal hidden">
-      <input type="text" id="nameInput" placeholder="닉네임 입력" />
-      <button id="saveName">저장</button>
-      <button id="cancelName">취소</button>
+      <input type="text" id="nameInput" placeholder="Enter your nickname" />
+      <button id="saveName">save</button>
+      <button id="cancelName">cancel</button>
     </div>
   </div>
 
