--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -66,7 +66,7 @@
     <div id="onboardingPopup" class="modal hidden">
       <div class="modal-content">
         
-        <h2>당신의 식단 유형을 선택해주세요</h2>
+        <h2>Let us know your dietary style!</h2>
         <form id="popupForm" style="margin-top: 20px;">
           <!-- 다양한 채식 유형 선택 -->
           <label><input type="radio" name="vegtype" value="Vegan" required /> Vegan</label><br>
@@ -75,7 +75,7 @@
           <label><input type="radio" name="vegtype" value="Lacto-ovo vegetarian" /> Lacto-ovo vegetarian</label><br>
           <label><input type="radio" name="vegtype" value="Pesco-vegetarian" /> Pesco-vegetarian</label><br>
           <label><input type="radio" name="vegtype" value="Pollo-vegetarian" /> Pollo-vegetarian</label><br><br>
-          <button type="submit">확인</button>
+          <button type="submit">confirm</button>
         </form>
       </div>
     </div>
