[Feature] Redesign settings page with modern card-based UI (08-05) - [Added] settings.css file for modular styling approach - [Changed] Diet type selection from dropdown to modal interface for improved UX - [Added] Card-based layout with smooth animations and hover effects - [Improved] Food group icons and profile image user experience design - [Added] Prefixed IDs to prevent conflicts with home page elements - [Maintained] Backward compatibility ensuring index.html remains unchanged - [Improved] Overall settings page visual hierarchy and user interaction flow

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -14,6 +14,11 @@
   <script src="https://unpkg.com/lucide@latest" defer></script>
   <script src="/static/script.js" defer></script>
 
+  <!-- 폰트 로드 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Kai&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -21,7 +26,10 @@
   <div class="container">
     <!-- 상단 로고 영역 -->
     <header class="logo">
-      <img src="https://placehold.co/150x40?text=Logo" alt="Vegan Lens Logo" />
+      <div class="vegan-lens-logo">
+        <span class="vegan-part">Vegan</span>
+        <span class="lens-part">Lens</span>
+      </div>
       <p class="sub-title">　</p>
     </header>
 
