fix: update hardcoded server URL in image upload

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -80,9 +80,9 @@
           <label><input type="radio" name="vegtype" value="Vegan" required /> Vegan</label><br>
           <label><input type="radio" name="vegtype" value="Lacto vegetarian" /> Lacto vegetarian</label><br>
           <label><input type="radio" name="vegtype" value="Ovo vegetarian" /> Ovo vegetarian</label><br>
-          <label><input type="radio" name="vegtype" value="Lacto-ovo vegetarian" /> Lacto-ovo vegetarian</label><br>
-          <label><input type="radio" name="vegtype" value="Pesco-vegetarian" /> Pesco-vegetarian</label><br>
-          <label><input type="radio" name="vegtype" value="Pollo-vegetarian" /> Pollo-vegetarian</label><br><br>
+          <label><input type="radio" name="vegtype" value="Lacto-ovo vegetarian" /> Lacto ovo vegetarian</label><br>
+          <label><input type="radio" name="vegtype" value="Pesco-vegetarian" /> Pesco vegetarian</label><br>
+          <label><input type="radio" name="vegtype" value="Pollo-vegetarian" /> Pollo vegetarian</label><br><br>
           <button type="submit">confirm</button>
         </form>
       </div>
