--- a/frontend/app/settings.html
+++ b/frontend/app/settings.html
@@ -129,15 +129,15 @@
           </label>
           <label class="settings-diet-option">
             <input type="radio" name="settingsVegtype" value="Lacto-ovo vegetarian" />
-            <span class="settings-diet-option-label">Lacto-Ovo Vegetarian</span>
+            <span class="settings-diet-option-label">Lacto Ovo Vegetarian</span>
           </label>
           <label class="settings-diet-option">
             <input type="radio" name="settingsVegtype" value="Pesco-vegetarian" />
-            <span class="settings-diet-option-label">Pesco-Vegetarian</span>
+            <span class="settings-diet-option-label">Pesco Vegetarian</span>
           </label>
           <label class="settings-diet-option">
             <input type="radio" name="settingsVegtype" value="Pollo-vegetarian" />
-            <span class="settings-diet-option-label">Pollo-Vegetarian</span>
+            <span class="settings-diet-option-label">Pollo Vegetarian</span>
           </label>
         </div>
         <div class="settings-modal-actions">
