[Feature] Improve home screen UI with responsive navigation implementation (08-05) - [Refactored] Main card layout to flexbox-based structure for center alignment optimization - [Changed] Card height to fixed values with optimized image/text center positioning - [Improved] Bottom navigation bar to support full screen width (maintaining 430px max limit) - [Added] CSS variable integration to reduce code duplication and improve maintainability - [Added] Home screen image assets (camera.png, gallery.png, lock.png) for enhanced visual experience - [Improved] Responsive design to provide consistent UI across all device types - [Enhanced] Overall home screen layout structure and user interface consistency

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -36,18 +36,18 @@
     <!-- 메인 버튼 카드 영역 -->
     <main class="button-area">
       <div class="card blue" id="cameraBtn">
-        <img src="https://placehold.co/100x100?text=Camera" alt="Take a picture" />
-        <p>TAKE A PICTURE</p>
+        <img src="/static/images/home/camera.png" alt="Take a picture" />
+        <p>TAKE A PHOTO</p>
       </div>
 
       <div class="card yellow" id="galleryBtn">
-        <img src="https://placehold.co/100x100?text=Gallery" alt="Select photo" />
+        <img src="/static/images/home/gallery.png" alt="Select photo" />
         <p>SELECT A PHOTO</p>
       </div>
 
       <div class="card green" id="liveCameraBtn">
-        <img src="https://placehold.co/100x100?text=Live+Camera" alt="Live Camera" />
-        <p>SELECT A PHOTO</p>
+        <img src="/static/images/home/lock.png" alt="Live Camera" />
+        <p>REAL-TIME ANALYSIS 🔒</p>
       </div>
 
       <!-- 카메라 및 갤러리 입력 필드 (숨김 처리) -->
