--- a/frontend/app/result.html
+++ b/frontend/app/result.html
@@ -26,7 +26,7 @@
       <span class="notice-title">Ingredient Categories</span>
       <div class="tooltip-wrapper">
         <span class="info-icon" id="infoIcon">ⓘ</span>
-        <div class="tooltip hidden" id="tooltip">Tap each category to see detailed ingredients</div>
+        <div class="tooltip hidden" id="tooltip">The analysis is for informational purposes only.<br>Users are advised to verify independently.</div>
       </div>
     </div>
 
