[Feature] Add caution ingredient notice for international users (08-13) - [Added] Caution notice display inside caution box when caution ingredients are present - [Added] English explanation about cross-contamination and mixed origin ingredients for clarity - [Improved] Accessibility by showing notice directly without requiring additional user clicks - [Added] Responsive design implementation for mobile device optimization - [Enhanced] User experience for international users with clear ingredient warnings

--- a/frontend/app/result.html
+++ b/frontend/app/result.html
@@ -33,7 +33,12 @@
     <!-- 결과 박스 리스트 -->
     <div class="box-list">
       <div class="result-box" id="dangerBox">🚫 Unsafe Ingredients</div>
-      <div class="result-box" id="cautionBox">⚠️ Caution Required</div>
+      <div class="result-box" id="cautionBox">
+        <div class="caution-info">⚠️ Caution Required</div>
+        <div class="caution-description" id="cautionDescription" style="display: none;">
+          This product is made in a facility that handles animal ingredients, which may cause cross-contamination.
+        </div>
+      </div>
       <div class="result-box" id="safeBox">✅ Safe Ingredients</div>
     </div>
 
