Remove console debug delay

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -5,7 +5,10 @@
 
   <!-- 메타 정보 및 외부 리소스 링크 -->
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0" />
+  <meta name="theme-color" content="#4caf50" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 
   <title>Vegan Lens</title>
 
