--- a/frontend/app/loading.html
+++ b/frontend/app/loading.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, maximum-scale=1.0" />
+  <meta name="theme-color" content="#4caf50" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+
   <title>Analyzing...</title>
+
   <link rel="stylesheet" href="/static/loading.css" />
+
 </head>
+
 <body>
+
   <div class="loading-container">
     <!-- 메인 페이지 카드 스타일과 일치하는 로딩 카드 -->
     <div class="loading-card">
@@ -157,5 +167,7 @@
     window.goBackHome = goBackHome;
     window.retryAnalysis = retryAnalysis;
   </script>
+  
 </body>
+
 </html>
