[Improve] Enhance result page logic and accessibility features (08-20) - [Removed] Auto-generated safe ingredients logic for cleaner data handling - [Changed] Safe box activation to only trigger when no danger/caution items exist - [Added] Caution notice for cross-contamination warning to improve user safety awareness - [Fixed] Subtitle accessibility by replacing fullwidth space with proper HTML entity - [Enhanced] Overall result page logic flow and user accessibility experience

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -33,7 +33,7 @@
         <span class="vegan-part">Vegan</span>
         <span class="lens-part">Lens</span>
       </div>
-      <p class="sub-title">　</p>
+      <p class="sub-title" aria-hidden="true">&nbsp;</p>
     </header>
 
     <!-- 메인 버튼 카드 영역 -->
